# C_CPlusPlus_Testing

./: .gitinoge  README.md  UnitTest.md
GoogleMockInvoke_backup/: EmployeeManager.hpp  IDatabaseConnection.cpp  main.cpp
GoogleTestAAA/: LibraryCode.cpp  LibraryCode.hpp  main.cpp  testRunner.cpp
GoogleTestAssertionsOnVectors_backup/: CMakeLists.txt  LibraryCode.cpp  main.cpp  testRunner.cpp
GoogleTestExceptions/: LibraryCode.cpp  main.cpp  testRunner.cpp
GoogleTestFixtures/GoogleTest-fixtures/: CMakeLists.txt  LibraryCode.cpp  LibraryCode.hpp  testRunner.cpp
GoogleTestFixtures/GoogleTest-no-fixtures/: testRunner.cpp
GoogleTestParameterizedTests/: LibraryCode.cpp  LibraryCode.hpp  main.cpp  testRunner.cpp
GoogleTestPartialRunning/: testRunner.cpp
GoogleTestProject_backup_mock_full/: CMakeLists.txt  Employee.hpp  EmployeeManager.cpp  IDatabaseConnection.cpp  IDatabaseConnection.hpp  testRunner.cpp
GoogleTestStringsOK/: LibraryCode.cpp  testRunner.cpp
GoogleTestWithLib/: LibraryCode.cpp  main.cpp  testRunner.cpp
GoogleTestWithLibFetchContent/: CMakeLists.txt  main.cpp  test.cpp
